@@ -1,13 +1,66 @@
-{
-    IBClasses = (
-        {CLASS = FirstResponder; LANGUAGE = ObjC; SUPERCLASS = NSObject; }, 
-        {
-            ACTIONS = {onCancel = id; onSend = id; }; 
-            CLASS = PasteSheet; 
-            LANGUAGE = ObjC; 
-            OUTLETS = {sendButton = id; sheet = id; text = id; usePastieCheck = id; }; 
-            SUPERCLASS = NSObject; 
-        }
-    ); 
-    IBVersion = 1; 
-}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>IBClasses</key>
+	<array>
+		<dict>
+			<key>ACTIONS</key>
+			<dict>
+				<key>onCancel</key>
+				<string>id</string>
+				<key>onSend</key>
+				<string>id</string>
+			</dict>
+			<key>CLASS</key>
+			<string>PasteSheet</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>OUTLETS</key>
+			<dict>
+				<key>notice_check</key>
+				<string>id</string>
+				<key>sendButton</key>
+				<string>id</string>
+				<key>sheet</key>
+				<string>id</string>
+				<key>text</key>
+				<string>id</string>
+				<key>usePastieCheck</key>
+				<string>id</string>
+			</dict>
+			<key>SUPERCLASS</key>
+			<string>CocoaSheet</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>CocoaSheet</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>OUTLETS</key>
+			<dict>
+				<key>sheet</key>
+				<string>id</string>
+			</dict>
+			<key>SUPERCLASS</key>
+			<string>NSObject</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>FirstResponder</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>SUPERCLASS</key>
+			<string>NSObject</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>NSObject</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+		</dict>
+	</array>
+	<key>IBVersion</key>
+	<string>1</string>
+</dict>
+</plist>
